[gd_scene load_steps=2 format=3 uid="uid://ku0dsonu0d8n"]

[ext_resource type="Script" path="res://Scripts/UI/LifelessCreator.gd" id="1_4218b"]

[node name="LifelessCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4218b")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.231373, 0.176471, 0.333333, 1)

[node name="CenterContainer" type="CenterContainer" parent="BackgroundColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LifelessView" type="ColorRect" parent="BackgroundColor/CenterContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
color = Color(0.168627, 0.129412, 0.235294, 1)

[node name="Howtolable" type="Label" parent="BackgroundColor/CenterContainer/LifelessView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "To add a skin, download the sprite as PNG from LPC Spritesheet Generator and place it in the Lifeless Folder.

File must be named as:
<name>_<surname>.png

Otherwise it wont get recognized by the game."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.5
offset_top = 64.0
offset_right = 120.5
offset_bottom = 109.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Lifeless Creator"

[node name="ErrorNotification" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 120.0
offset_right = 121.0
offset_bottom = 165.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.312295, 0.248026, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="ErrorNotification"]

[node name="OpenLPCCreator" type="Button" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 1
offset_left = 64.0
offset_top = 64.0
offset_right = 264.0
offset_bottom = 124.0
text = "Universal LPC Spritesheet Generator"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 128.0
offset_bottom = 215.0
text = "Name"

[node name="NameEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -504.0
offset_right = 254.0
offset_bottom = -464.0
grow_vertical = 0

[node name="SurnameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 134.0
offset_bottom = 279.0
text = "Surname"

[node name="SurnameEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -440.0
offset_right = 254.0
offset_bottom = -400.0
grow_vertical = 0

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 320.0
offset_right = 134.0
offset_bottom = 343.0
text = "Description used by AI"

[node name="DescriptionEditScroll" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 344.0
offset_right = 320.0
offset_bottom = 448.0

[node name="DescriptionEdit" type="TextEdit" parent="DescriptionEditScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Used to pass as System prompt for the LLM"
wrap_mode = 1

[node name="OpenSpriteSheetFolder" type="Button" parent="."]
layout_mode = 1
offset_left = 64.0
offset_top = 488.0
offset_right = 320.0
offset_bottom = 548.0
text = "Open Lifeless Folder"

[node name="SaveLifeless" type="Button" parent="."]
layout_mode = 0
offset_left = 1016.0
offset_top = 576.0
offset_right = 1216.0
offset_bottom = 640.0
text = "Save Lifeless"

[node name="ReloadSkin" type="Button" parent="."]
layout_mode = 0
offset_left = 688.0
offset_top = 520.0
offset_right = 786.0
offset_bottom = 560.0
text = "Reload Skin"

[node name="SelectAnimation" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 520.0
offset_right = 680.0
offset_bottom = 560.0
text_overrun_behavior = 1
clip_text = true

[connection signal="timeout" from="ErrorNotification/Timer" to="." method="_on_notif_timer_timeout"]
[connection signal="pressed" from="OpenLPCCreator" to="." method="_on_open_lpc_creator_pressed"]
[connection signal="pressed" from="OpenSpriteSheetFolder" to="." method="_on_open_sprite_sheet_folder_pressed"]
[connection signal="pressed" from="SaveLifeless" to="." method="_on_save_lifeless_pressed"]
[connection signal="pressed" from="ReloadSkin" to="." method="_on_reload_skin_pressed"]
[connection signal="item_selected" from="SelectAnimation" to="." method="_on_select_animation_item_selected"]
